projects/vb6parse/snapshots/parsers/cst/file_operations/kill/kill_with_comment.snap
---
source: projects/vb6parse/tests/file_operations/kill.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: Newline
      text: "\n"
    - kind: SubStatement
      children:
        - kind: SubKeyword
          text: Sub
        - kind: Whitespace
          text: " "
        - kind: Identifier
          text: Test
        - kind: ParameterList
          children:
            - kind: LeftParenthesis
              text: (
            - kind: RightParenthesis
              text: )
        - kind: Newline
          text: "\n"
        - kind: StatementList
          children:
            - kind: KillStatement
              children:
                - kind: Whitespace
                  text: "    "
                - kind: KillKeyword
                  text: Kill
                - kind: Whitespace
                  text: " "
                - kind: StringLiteralExpression
                  children:
                    - kind: StringLiteral
                      text: "\"temp.txt\""
                - kind: Whitespace
                  text: " "
            - kind: EndOfLineComment
              text: "' Delete temporary file"
            - kind: Newline
              text: "\n"
        - kind: EndKeyword
          text: End
        - kind: Whitespace
          text: " "
        - kind: SubKeyword
          text: Sub
        - kind: Newline
          text: "\n"
